2004-07-06  Bastien Nocera  <hadess@hadess.net>

	* data/schemas.sh: actually use the size option of the thumbnailer

2004-07-04  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_handle_key): Space in full-screen mode
	now acts as play/pause

2004-07-04  Bastien Nocera  <hadess@hadess.net>

	* src/totem-video-thumbnailer.c: (add_holes_to_pixbuf_large),
	(save_pixbuf): better look and size for the large thumbnails, less
	wasted space

2004-07-04  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am:
	* data/filmholes-big-left.png:
	* data/filmholes-big-right.png:
	* src/totem-video-thumbnailer.c: (print_usage),
	(add_holes_to_pixbuf_small), (add_holes_to_pixbuf_large),
	(save_pixbuf), (main): added better holes for bigger thumbnail sizes,
	add an option to the thumnailer for bigger sizes

2004-07-04  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-properties.c:
	(bacon_video_widget_properties_set_from_current):
	* src/totem-private.h:
	* src/totem-statusbar.c: (totem_statusbar_update_time):
	* src/totem-time-label.c: (totem_time_label_new),
	(totem_time_label_class_init), (totem_time_label_set_time):
	* src/totem-time-label.h:
	* src/totem.c: (update_current_time),
	(spin_button_value_changed_cb), (totem_action_handle_key), (main):
	* src/video-utils.c: (totem_time_to_string),
	(totem_time_to_string_text):
	* src/video-utils.h:

	Move the time to string functions to the video-utils.[ch], update
	the code taking that into account, finish the TotemTimeLabel code and
	hook it up in totem.c, make Shift+Right/Left arrow do shorter seeks

2004-07-04  Bastien Nocera  <hadess@hadess.net>

	* data/Totem_properties.server.in.in._1:
	* data/Totem_properties.server.in.in._3: remove unused translations

2004-07-04  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade: added a time label for the fullscreen controls
	* src/Makefile.am: upd
	* src/bacon-video-widget-xine.c: (bacon_video_widget_open),